# jeelink-davis

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.toml  config.toml.example  davis-weather.service  deploy.sh  pyproject.toml  update.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: grafana-davis-dashboard.json  influxdb-grafana.md  influxdb-task-hourly-downsample.flux  influxdb-task-hourly-downsample.json  mqtt-iobroker.md
jeelink_davis/: __init__.py  connection.py  detect.py  models.py  protocol.py  station.py
tests/: test_detect.py  test_protocol.py
tools/: backfill_influxdb.py  check_radar_layer.py  detect.py  sniff.py
web/: app.py  bme280_reader.py  broadcaster.py  config.py  db.py  influxdb_writer.py  mqtt_publisher.py  reader.py
web/static/: index.html
web/static/i18n/: de.json  en.json
